Fixed Z fighting issue with header that covered the wheel

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -379,7 +379,7 @@ label {
 
 .modal.open {
     opacity: 1;
-    z-index: 999;
+    z-index: 2000;
 }
 
 .modal-inner {
